--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: "SMU Research Kubernetes Documentation"
 author: "Southern Methodist University"
 copywright: "2026"
-logo: "./images/smu_logo.jpg"
+logo: "./images/smu_logo.png"
 execute:
   execute_notebooks: "off"
 html:
