--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,6 +1,5 @@
-root: index.md
 format: jb-book
-defaults:
-  numbered: false
-parts:
-  - file: attribution.md
+root: index
+
+chapters:
+  - file: attribution
