--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,6 +1,7 @@
 format: jb-book
 root: index
-title: Welcome
-chapters:
-  - file: page1
-  - file: page2
+parts:
+- caption: About
+  chapters:
+    - file: page1
+    - file: page2
